# metasprint-autopilot

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  RELEASE_CHECKLIST.md  _full_depth.js  aact_proxy.py  index.html  manifest.json  metasprint-autopilot.html  package-lock.json  package.json  playwright.config.js  push.sh  pyproject.toml  requirements.txt  run_all_tests.py  sw.js  test_advanced_stats.py  test_agent_a.py  test_agent_b.py  test_agent_b_deep.py  test_agent_b_svg.py  test_cochrane_validation.py  test_data_structure.py  test_drilldown.py  test_e2e_real_metas.py  test_full_meta_analysis.py  test_network_debug.py  test_real_data_browser.py  webr-reviewer-validation.js
data/: al_burhan_export.json  al_burhan_minified.json  autoscreener_cardio_benchmark_v1.jsonl  rapidmeta-topic-registry.js  rapidmeta-validation-summary.js
docs/: protocol.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
paper/: manuscript_plos_one.md  methods_paper_living_evidence.md  paper.bib  paper.md
pipeline/: auto_cluster.py  drug_normalize.py  export_for_browser.py  harvest_ctgov_results.py  outcome_normalize.py  pool_dl.py  run_pipeline.py  shahid_validate.py  test_auto_cluster.py  test_drug_normalize.py  test_export.py  test_harvest.py  test_integration.py  test_outcome_normalize.py  test_pool_dl.py  test_shahid.py
tests/: cross-validation.spec.js  living-ma-and-advanced.spec.js  review-fixes-round1.spec.js  sglt2i-hf-benchmark.spec.js  test_rapidmeta_mode.spec.js  validate_against_R.R
truthcert1_work/: README.txt  (+15 more)
(+673 files in other folders)
